feat(frontend): enhance MapSection (glow, hover hint, a11y, hasMap JSON-LD, i18n)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,6 +38,7 @@
         "latitude": "49.5897",
         "longitude": "11.0089"
       },
+      "hasMap": "https://www.google.com/maps/place/Hauptstraße+12,+91054+Erlangen,+Germany/@49.5897,11.0089,18z",
       "url": "https://www.meisterbarbershop.de",
       "telephone": "+49-9131-XXXXXX",
       "priceRange": "€€",
